--- a/Prueba_Daniel_Hernandez/Backend/Api_Prueba_Tecnica/Api_Prueba_Tecnica/appsettings.Development.json
+++ b/Prueba_Daniel_Hernandez/Backend/Api_Prueba_Tecnica/Api_Prueba_Tecnica/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ITHEALTH-DP;Initial Catalog=master;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=ITHEALTH-DP;Initial Catalog=Daniel_Hernandez;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
